libs/@local/hashql/hir/tests/ui/reify/underscore.jsonc
//@ run: fail
//@ description: Tests that underscore placeholders are properly rejected when used as expressions.
"_"
//~^ ERROR `_` not allowed here
